[package]
name = "maruska"
version = "0.1.0"
authors = ["Daan Sprenkels <dsprenkels@gmail.com>"]

[dependencies]
docopt = "0.6"
env_logger = "0.3.2"
log = "0.3"
ncurses = "5.73"
rustc-serialize = "0.3"
strsim = "0.4"
libclient = { path = "src/libclient/" }

[[bin]]
name = "maruska"
path = "src/main.rs"

[[bin]]
name = "maruska-cli"
path = "src/cli/main.rs"
